<resources>
    <string name="app_name">CarPooling</string>

    <!--registraion and login-->
    <string name="login">SIGN IN</string>
    <string name="forgot">Forgot password ?</string>
    <string name="register_now">Don\'t have an account?</string>
    <string name="terms">By Sign up, you are agree with
        <u>Terms and Conditions.</u>
    </string>

    <!--<string name="already_mem"> </string>-->
    <string name="login_now">Already have an account?</string>
    <string name="hint_name">Enter Name</string>
    <string name="hint_email">Enter Email</string>
    <string name="hint_pwd">Enter Password</string>
    <string name="hint_repwd">Re-enter Password</string>
    <string name="hint_mob">Mobile Number</string>
    <string name="register">Register</string>
    <string name="err_msg_email">Enter Correct EmailId</string>
    <string name="err_msg_name">Enter Your Name</string>
    <!--forget password-->
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="verify_email_id">We just need your registered Email Id to sent Email verification link.</string>


    <!--Internet connection-->
    <string name="connect_internet">Connected to Internet</string>
    <string name="sorry_nointernet">Sorry! Not connected to internet</string>
    <!--<string name="base_url">http://daivajnyabrahmin.com/</string>-->
    <!--<string name="base_url">"https://reqres.in/"</string>-->
    <string name="more">More</string>

    <!--Contact Us-->
    <string name="call_us_at">Call us at :</string>
    <string name="contact_num">+91 9845184444</string>
    <string name="email_us_at">Email us at :</string>
    <string name="contact_email">info@gmediasolutions.in</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="my_cars">My Cars</string>
    <string name="my_booking">My Booking</string>
    <string name="find_ride">Find Ride</string>
    <string name="offer_ride">Offer Ride</string>
    <string name="profile">Profile</string>
    <string name="home">Home</string>
    <string name="search_ride">Search A Ride</string>
    <string name="source">Source</string>
    <string name="destination">Destination</string>
    <string name="time">Time</string>
    <string name="update_details">UPDATE</string>

    <!--booking confirmation-->
    <string name="booking_confirm">Booking Confirmation</string>
    <string name="thank_order">Thank you for booking your trip with us.</string>
    <string name="contact_order">For any query, Please contact to our customer support</string>
    <string name="go_to_booking">Go to My Booking</string>


    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Home</item>
        <item>Profile</item>
        <item>Find Ride</item>
        <item>Offer Ride</item>
        <item>My Booking</item>
        <item>My Cars</item>
        <item>Settings</item>
        <item>Logout</item>
    </string-array>

</resources>
