<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:card_view="http://schemas.android.com/apk/res-auto"
                android:background="@drawable/bg_img"
                android:gravity="center">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:scrollbars="vertical"
        android:scrollbarStyle="insideInset">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:theme="@style/AppTheme"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
                android:id="@+id/cv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:foreground="?android:attr/selectableItemBackground"
                app:cardCornerRadius="4dp"
                card_view:cardElevation="15sp"
                card_view:cardUseCompatPadding="true">
        <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:layout_gravity="center"
                android:orientation="vertical"
                android:padding="20dp">
        <TextView
            android:layout_marginTop="10dp"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="45sp"
            android:id="@+id/appname_tvreg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/logo"
            android:text="@string/app_name"
            android:layout_marginBottom="20dp"
            android:layout_centerHorizontal="true"/>



        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="text"
                android:hint="@string/hint_name"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_email"
            android:layout_width="match_parent"

            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_email"/>
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="text"
                android:hint="@string/hint_pwd"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_confirmpassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/confirmpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="text"
                android:hint="@string/hint_repwd"/>
        </android.support.design.widget.TextInputLayout>


        <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp">

            <EditText
                android:id="@+id/number"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="number"
                android:hint="@string/hint_mob"/>
        </android.support.design.widget.TextInputLayout>

            <Button
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    style="@style/Widget.AppCompat.Button.Colored"
                    android:id="@+id/register"
                    android:textColor="@color/colorPrimaryDark"
                    android:text="@string/register"
                    android:textSize="15sp" />
            <TextView
                    android:id="@+id/login_now"
                    android:layout_marginTop="20dp"
                    android:layout_width="wrap_content"
                    android:textColor="@color/colorPrimary"
                    android:layout_height="wrap_content"
                    android:text="@string/login_now"/>

        </LinearLayout>
        </android.support.v7.widget.CardView>
    </LinearLayout>

    </ScrollView>

</RelativeLayout>
