<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv"
        android:background="@color/white"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="15dp">

<LinearLayout android:id="@+id/activity_select"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:orientation="vertical"
              android:layout_gravity="center">

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/forgot"
            android:textColor="@color/colorPrimaryDark"
            android:textSize="20dp" />

    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:padding="10dp"
            android:text="@string/forgot_password_msg"
            android:textColor="@color/colorPrimary"
            android:textSize="14dp" />

    <android.support.design.widget.TextInputLayout
            android:id="@+id/input_layout_frg_id"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp">

        <EditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:maxLength="30"
                android:inputType="textEmailAddress"
                android:hint="@string/hint_name" />
    </android.support.design.widget.TextInputLayout>
    <!-- Login Button -->

    <Button
            android:id="@+id/btn_reset_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:background="@color/colorPrimary"
            android:text="Reset Password"
            android:textColor="@color/white" />

    <com.wang.avi.AVLoadingIndicatorView
            android:id="@+id/progressBar"
            style="@style/AVLoadingIndicatorView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:padding="15dp"
            android:layout_gravity="center|bottom"
            app:indicatorColor="@color/colorPrimaryDark"
            app:indicatorName="BallClipRotatePulseIndicator" />
</LinearLayout>
</android.support.v7.widget.CardView>