<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:id="@+id/cv"
        android:layout_width="350dp"
        android:background="@color/white"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:foreground="?android:attr/selectableItemBackground"
        app:cardCornerRadius="4dp"
        app:cardElevation="15dp">

    <LinearLayout android:id="@+id/activity_select"
                  android:layout_width="match_parent"
                  android:layout_height="wrap_content"
                  android:orientation="vertical"
                  android:layout_gravity="center">

        <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center"
                android:padding="10dp"
                android:text="@string/search_ride"
                android:textAllCaps="true"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="20dp"/>

        <android.support.design.widget.TextInputLayout
                android:id="@+id/source_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:boxStrokeWidth="5dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_source"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/source"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/destination_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:boxStrokeWidth="5dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_destination"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/destination"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
                android:id="@+id/time_text_input"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                android:layout_width="match_parent"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                app:boxStrokeWidth="5dp"
                android:layout_height="wrap_content"
                app:errorEnabled="true">
            <android.support.design.widget.TextInputEditText
                    android:id="@+id/et_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/time"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"
                    android:textColor="@color/black"/>
        </android.support.design.widget.TextInputLayout>


        <!-- Login Button -->

        <Button
                android:id="@+id/btn_search"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:background="@color/colorPrimary"
                android:text="Search"
                android:textColor="@color/white"/>

        <!--<com.wang.avi.AVLoadingIndicatorView-->
                <!--android:id="@+id/progressBar"-->
                <!--style="@style/AVLoadingIndicatorView"-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:padding="15dp"-->
                <!--android:layout_gravity="center|bottom"-->
                <!--app:indicatorColor="@color/colorPrimaryDark"-->
                <!--app:indicatorName="BallClipRotatePulseIndicator"/>-->
    </LinearLayout>
</android.support.v7.widget.CardView>